[workspace]
resolver = "2"
members = [
    "crates/reqwest",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["The St. Jude Rust Labs project developers"]
homepage = "https://github.com/stjude-rust-labs/http-cache-stream"
repository = "https://github.com/stjude-rust-labs/http-cache-stream"

[workspace.dependencies]
http = "1.2.0"
http-cache-semantics = "2.1.0"
serde = { version = "1.0.218", features = ["derive"] }
http-serde = "2.1.1"
httpdate = "1.0.3"
futures = "0.3.31"
anyhow = "1.0.97"
libc = "0.2.170"
sha2 = "0.10.8"
hex = "0.4.3"
bincode = { version = "2.0.0", features = ["serde"] }
tracing = "0.1.41"
tokio = { version = "1.44.0", default-features = false, features = ["fs", "io-util", "rt"] }
tokio-util = { version = "0.7.13", features = ["io"] }
http-body = "1.0.1"
bytes = "1.10.1"
pin-project-lite = "0.2.16"
cfg-if = "1.0.0"
reqwest = { version = "0.12.14", default-features = false }
reqwest-middleware = "0.4.1"
blake3 = "1.6.1"
tempfile = "3.18.0"
smol = "2.0.2"

[package]
name = "http-cache-stream"
version = "0.1.0"
description = "A HTTP cache implementation for streaming bodies."
rust-version = "1.85.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
http = { workspace = true }
http-cache-semantics = { workspace = true }
serde = { workspace = true }
http-serde = { workspace = true }
httpdate = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
http-body = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
cfg-if = {workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }
smol = { workspace = true, optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
smol = ["dep:smol"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_System",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_Console",
]
