[package]
name = "http-cache-stream"
version = "0.2.0"
description = "A HTTP cache implementation for streaming bodies."
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
[workspace]
resolver = "2"
members = ["crates/reqwest"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["The St. Jude Rust Labs project developers"]
homepage = "https://github.com/stjude-rust-labs/http-cache-stream"
repository = "https://github.com/stjude-rust-labs/http-cache-stream"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.2"
bytes = "1.10.1"
cfg-if = "1.0.1"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-body = "1.0.1"
http-cache-semantics = "2.1.0"
http-serde = "2.1.1"
httpdate = "1.0.3"
libc = "0.2.175"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.22", default-features = false }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
smol = "2.0.2"
tempfile = "3.20.0"
tokio = { version = "1.47.1", default-features = false, features = ["fs", "io-util", "rt", "macros"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
smol = ["dep:smol"]

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-cache-semantics = { workspace = true }
http-serde = { workspace = true }
httpdate = { workspace = true }
libc = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
smol = { workspace = true, optional = true }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Console",
]
