[package]
name = "http-cache-stream-reqwest"
version = "0.3.0"
description = "A caching middleware for reqwest that supports streaming bodies."
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
http-cache-stream = { path = "../..", version = "0.3.0" }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
